@@ -9,6 +9,9 @@ SilvaNewsNetwork changes
    Bugs Fixed:
 
      - always sort agenda viewer results by start datetime
+     - for news viewers, sort results by either start datetime,
+       if present, else display datetime, so that agenda items
+       if included in the results, are sorted properly
 
    Ported from trunk (SNN 2.8)
 
